# Python

./: .gitignore.bak  1  1.pub  Ticket.txt
FastAPI_Course/: .env  TICKET.TXT  main.py
SkillBox/: TICKET.txt
[youtube] Fast API Crash Course Code-along Build an app with Postgres SQL Alchemy Async and more/: .gitignore  alembic.ini  main.py  pyproject.toml  ticket.txt
[youtube] Fast API Crash Course Code-along Build an app with Postgres SQL Alchemy Async and more/alembic/versions/: b137cd5b718d_.py
[youtube] Fast API Crash Course Code-along Build an app with Postgres SQL Alchemy Async and more/api/: users.py
[youtube] Fast API Crash Course Code-along Build an app with Postgres SQL Alchemy Async and more/db/: db_setup.py
[youtube] Fast API Crash Course Code-along Build an app with Postgres SQL Alchemy Async and more/db/models/: course.py  user.py
[youtube] Fast API Crash Course Code-along Build an app with Postgres SQL Alchemy Async and more/db/postgres/: postmaster.pid
[youtube] Fast API Crash Course Code-along Build an app with Postgres SQL Alchemy Async and more/db/postgres/base/1/: 1247  1247_vm  1249  1249_fsm  1249_vm  1259  1259_fsm  1259_vm  16403  16408  16410  16411  16412  16418  16419  16426  16427  16433  16434  16441  16442  16448  16449  16456  16457  16462  16474  16475  16481  16482  16489  16490  16496  16497  16509  2224  2579  2604  2606  2606_vm  (+38 more)
[youtube] Fast API Crash Course Code-along Build an app with Postgres SQL Alchemy Async and more/db/postgres/global/: 1214  1232  1233  2396  2676  pg_control  pg_internal.init
(+785 files in other folders)
