[tool.poetry]
name = "[youtube] fast api crash course code-along | build an app with postgres, sql alchemy, async, and more"
version = "0.1.0"
description = ""
authors = ["Aleskey Elchin"]
readme = "README.md"
packages = [{include = "[youtube] fast api crash course code_along | build an app with postgres, sql alchemy, async, and more"}]

[tool.poetry.dependencies]
python = "^3.9.13"
uvicorn = "^0.19.0"
fastapi = "^0.87.0"
pydantic = "^1.10.2"
sqlalchemy = "^1.4.44"
psycopg2-binary = "^2.9.5"
sqlalchemy-utils = "^0.38.3"
 

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
